--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Gluteny.zip filter=lfs diff=lfs merge=lfs -text
 gluteny.zip filter=lfs diff=lfs merge=lfs -text
+gluteny-share filter=lfs diff=lfs merge=lfs -text
